@@ -44,61 +44,25 @@
 
 #include "../VFS/vfs.h"
 
-class SplitterSpinBox : public QDoubleSpinBox
-{
-    Q_OBJECT
-
-private:
-    KIO::filesize_t m_division;
-    mutable KIO::filesize_t m_longValue;
-
-public:
-    SplitterSpinBox(QWidget * parent = 0) : QDoubleSpinBox(parent), m_division(1), m_longValue(1) {
-        setMinimum(1);
-        setMaximum(9999999999.0);
-    }
-
-    void setLongValue(KIO::filesize_t valueIn) {
-        m_longValue = valueIn;
-        if (m_longValue == 0)
-            m_longValue++;
-        setValue((double)m_longValue / m_division);
-    }
-
-    KIO::filesize_t longValue() const {
-        return m_longValue;
-    }
-
-    double valueFromText(const QString& text) const {
-        double value = QDoubleSpinBox::valueFromText(text);
-        m_longValue = (KIO::filesize_t)(value * m_division);
-        return value;
-    }
-
-    void setDivision(KIO::filesize_t div) {
-        m_division = div;
-        setValue((double)m_longValue / m_division);
-    }
-};
-
-struct PredefinedDevice {
-    QString name;
-    KIO::filesize_t capacity;
-};
 
 class SplitterGUI : QDialog
 {
     Q_OBJECT
-
 private:
-    int                             predefinedDeviceNum;
+    struct PredefinedDevice {
+        QString name;
+        KIO::filesize_t capacity;
+    };
+
+    static const PredefinedDevice predefinedDevices[];
+    static const int predefinedDeviceNum;
+
     KIO::filesize_t                 userDefinedSize;
     int                             lastSelectedDevice;
     int                             resultCode;
+    KIO::filesize_t                 division;
 
-    static PredefinedDevice predefinedDevices[];
-
-    SplitterSpinBox *spinBox;
+    QDoubleSpinBox  *spinBox;
     QComboBox       *deviceCombo;
     QComboBox       *sizeCombo;
     KUrlRequester   *urlReq;
@@ -109,9 +73,7 @@ public:
     KUrl    getDestinationDir()     {
         return KUrl(urlReq->url().prettyUrl()); /* TODO: is prettyUrl what we need? */
     }
-    KIO::filesize_t getSplitSize()  {
-        return spinBox->longValue();
-    }
+    KIO::filesize_t getSplitSize();
     int     result()                {
         return resultCode;
     }
@@ -123,8 +85,6 @@ public slots:
 
 protected:
     virtual void keyPressEvent(QKeyEvent *e);
-
-public:
 };
 
 #endif /* __SPLITTERGUI_H__ */
