@@ -1,5 +1,6 @@
     ADDED: option: Panel > View > Locale aware sorting
 
+    FIXED: [ 2949337 ] splitter ui bug
     FIXED: [ 2843749 ] view item is deselected when updated
     FIXED: brief view: mouse wheel doesn't work
     FIXED: brief view: mouse selection doesn't work in columns > columns per page
